--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   flutter_svg: ^2.2.1
   font_awesome_flutter: ^10.10.0
+  get_it: ^8.2.0
   go_router: ^16.2.4
   google_fonts: ^6.3.2
 
