--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get_it: ^8.2.0
   go_router: ^16.2.4
   google_fonts: ^6.3.2
+  skeletonizer: ^2.1.0+1
   url_launcher: ^6.3.2
 
 dev_dependencies:
